--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
                         <li>
                             <a 
                             target="_blank"
-                            href="https://www.twitch.tv/directory/game/VALORANT">
-                                <img src="https://static-cdn.jtvnw.net/ttv-boxart/516575-188x250.jpg" alt="Imagem do jogo Valorant">
+                            href="https://www.twitch.tv/directory/game/Yu-Gi-Oh!%20Duel%20Links">
+                                <img src="https://static-cdn.jtvnw.net/ttv-boxart/494508_IGDB-285x380.jpg" alt="Imagem do jogo Yu-Gi-Oh duel links">
                             </a>
                         </li>
 
