--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                             <a 
                             target="_blank"
                             href="https://www.twitch.tv/directory/game/Yu-Gi-Oh!%20Duel%20Links">
-                                <img src="https://static-cdn.jtvnw.net/ttv-boxart/494508_IGDB-285x380.jpg" alt="Imagem do jogo Yu-Gi-Oh duel links">
+                                <img src="https://static-cdn.jtvnw.net/ttv-boxart/494508_IGDB-285x380.jpg" alt="Imagem do jogo YuGiOh duel links">
                             </a>
                         </li>
 
