--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                     </li>
 
                     <li>
-                        <a target="_blank" href="https://twitter.com/geymissonalessandro">
+                        <a target="_blank" href="https://twitter.com/Geymisson23">
                             <svg width="32" height="32" viewBox="0 0 32 32" fill="none"
                                 xmlns="http://www.w3.org/2000/svg">
                                 <path
